--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+		<div id="grid-container"></div>
+	<div>
+  <label for="block_id">Block ID:</label>
+  <input type="number" id="block_id" min="1" max="9">
+  <label for="color_id">Color:</label>
+  <input type="color" id="color_id">
+  <button id="change_button" onclick="changeColor()">Change Color</button>
+  <button id="reset_button" onclick="resetColors()">Reset</button>
+</div>
+
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
